stdouts/macaron
/root/Targets/macaron
└─┬ macaron@0.3.1 
  ├── coffee-script@1.12.7 
  ├── lodash@2.4.2 
  └─┬ optimist@0.6.1 
    ├── minimist@0.0.10 
    └── wordwrap@0.0.3 

Setup Done exists, not setting up
:../FeatureTester/libs/:/root/Targets/macaron/node_modules
Set Default Z3_PATH to ./node_modules/z3javascript/bin/libz3.so
ExpoSE Master: /root/ExpoSE/lib/Harness/src/harness.js max concurrent: 16 max paths: 1000000
Setting timeout to 900000
*** [0 done /0 queued / 1 running / 0 errors / 0% coverage ] ****** [0 done /0 queued / 1 running / 0 errors / 0% coverage ] ****** [1 done /0 queued / 0 running / 1 errors / 89% coverage ] ***
*-- Stat Module Output --*
*-- concretizations: ["defineProperty","bound log","call","join","charCodeAt","RegExp","apply","lastIndexOf","toUpperCase","pop","parseFloat","splice","create","reverse","sort","fromCharCode","floor","SyntaxError"]
*-- Stat Module Done --*
*-- Test Case {"_bound":0} start 0.0673 took 54.5639s
*-- Errors occured in test {"_bound":0}
* Error: /root/Targets/macaron/node_modules/macaron/lib/index.coffee:151:3: error: invalid object key
  @clone: (object)->
  ^^^^^^
*-- Replay with NO_COMPILE=1 expoSE replay '/root/ExpoSE/lib/Harness/src/harness.js' '{"_bound":0}'
*-- Coverage Data
*- File /root/ExpoSE/lib/Harness/src/harness.js. Coverage (Term): 18% Coverage (LOC): 24%
*- File /root/ExpoSE/lib/S$/bin/symbols.js. Coverage (Term): 16% Coverage (LOC): 34%
*- File /root/Targets/macaron/node_modules/macaron/main.js. Coverage (Term): 83% Coverage (LOC): 100%
*- File /root/Targets/macaron/node_modules/coffee-script/register.js. Coverage (Term): 94% Coverage (LOC): 100%
*- File /root/Targets/macaron/node_modules/coffee-script/lib/coffee-script/register.js. Coverage (Term): 74% Coverage (LOC): 75%
*- File /root/Targets/macaron/node_modules/coffee-script/lib/coffee-script/coffee-script.js. Coverage (Term): 30% Coverage (LOC): 34%
*- File /root/Targets/macaron/node_modules/coffee-script/lib/coffee-script/lexer.js. Coverage (Term): 70% Coverage (LOC): 78%
*- File /root/Targets/macaron/node_modules/coffee-script/lib/coffee-script/rewriter.js. Coverage (Term): 85% Coverage (LOC): 90%
*- File /root/Targets/macaron/node_modules/coffee-script/lib/coffee-script/helpers.js. Coverage (Term): 58% Coverage (LOC): 65%
*- File /root/Targets/macaron/node_modules/coffee-script/lib/coffee-script/parser.js. Coverage (Term): 84% Coverage (LOC): 98%
*- File /root/Targets/macaron/node_modules/coffee-script/lib/coffee-script/sourcemap.js. Coverage (Term): 18% Coverage (LOC): 22%
*- File /root/Targets/macaron/node_modules/coffee-script/lib/coffee-script/nodes.js. Coverage (Term): 57% Coverage (LOC): 68%
*- File /root/Targets/macaron/node_modules/coffee-script/lib/coffee-script/scope.js. Coverage (Term): 77% Coverage (LOC): 83%
*- Re-run with EXPOSE_PRINT_COVERAGE=1 to print line by line coverage information
** ExpoSE Finished. 1 paths with 1 errors **
